# securebank-cpp

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  release.yml
crow-bank-app/: .gitignore  CMakeLists.txt  README_WORKFLOW.md  build.sh  build_linux.sh  build_windows.sh  crow_bank_app  main.cpp  package-lock.json  package.json  start_vm.sh  win-toolchain.cmake
crow-bank-app/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
crow-bank-app/build-linux/public/: style.css
crow-bank-app/public/: dashboard.html  index.html  login.html  register.html  style.css
crow-bank-app/public/js/: api.js  auth.js  dashboard.js  utils.js
crow-bank-app/src/: input.css
crow-bank-app/win-build/: CMakeCache.txt  Makefile  cmake_install.cmake
